# ml_from_scratch_cpp

./: .gitignore  CMakeLists.txt  README.md
data/: .~lock.wage_predict.csv#
include/: algo.h  processing.h
include/core/data/: reading.h  splitting.h  text.h
include/core/encoding/: features.h  text_terms.h
include/core/feature/: manipulation.h
include/core/metrics/: linear_metrics.h
include/ml_from_scratch_cpp/core/data/: reading.h  splitting.h  text.h
include/ml_from_scratch_cpp/models/bayesian/: naive_bayes.h
include/ml_from_scratch_cpp/models/knn/: knn.h
include/models/bayesian/: naive_bayes.h
include/models/knn/: knn.h
include/models/linear/: lr.h
src/: CMakeLists.txt  algo.cpp  main.cpp  processing.cpp
src/core/data/: reading.cpp  splitting.cpp  text.cpp
src/core/encoding/: features.cpp  text_terms.cpp
src/core/feature/: manipulation.cpp
src/core/metrics/: linear_metrics.cpp
src/models/bayesian/: main.cpp  naive_bayes.cpp
src/models/knn/: knn.cpp  main.cpp
src/models/linear/: lr.cpp  main.cpp
